# cg-18-19

./: .gitignore  CMakeLists.txt  README.md  SistemaSolar.xml  terra.3d
src/: main.cpp
src/engine/: CMakeLists.txt  colour.cpp  colour.h  engine.cpp  engine.h  group.cpp  group.h  light.cpp  light.h  loadTexture.cpp  loadTexture.h  parser.cpp  parser.h  point.h  tinyxml2.h  transform.cpp  transform.h
src/generator/: CMakeLists.txt  drawBezierPatches.cpp  drawBezierPatches.h  generator.cpp  point.h
